--- a/static/assets/libs/css/style.css
+++ b/static/assets/libs/css/style.css
@@ -77,7 +77,7 @@
          ----------------------------
 
 
-6. Pages
+6. pages
 
     - 6.1.   Blank Page
     - 6.2.   Blank Page Header
@@ -4556,7 +4556,7 @@ tr.group:hover {
 
 
 /* ==========================================================================
- 6. Pages
+ 6. pages
  ========================================================================== */
 
 
